// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing DatasetContext matches snapshot when fetching 1`] = `
<body>
  <div>
    <span>
      Fetching data...
    </span>
  </div>
</body>
`;

exports[`Testing DatasetContext matches snapshot when fetching and loading is passed 1`] = `
<body>
  <div>
    <span>
      loading
    </span>
  </div>
</body>
`;

exports[`Testing DatasetContext matches snapshot when fetching and loadingComponent is passed 1`] = `
<body>
  <div>
    <span>
      loading component
    </span>
  </div>
</body>
`;

exports[`Testing DatasetContext matches snapshot when fetching fails 1`] = `
<body>
  <div>
    <span>
      Fetching data...
    </span>
  </div>
</body>
`;

exports[`Testing DatasetContext matches snapshot when loadingComponent is null 1`] = `
<body>
  <div />
</body>
`;

exports[`Testing DatasetContext matches snapshot with Dataset provided 1`] = `
<body>
  <div>
    <div>
      <h2>
        test nick value
      </h2>
    </div>
  </div>
</body>
`;
